# PhantomDrive-

./: .gitignore  0304.md  05.md  06.md  0608对接文档.md  07.md  A-B-v1-20260507.md  CMakeLists.txt  CODEX_WINDOW_WORK_SUMMARY.md  E-A交付文档.md  E-A交付文档2.md  E-B交付文档.md  PhantomDrive_整合变更说明.docx  README.md  ToSolve.md  environment.md  generate_report.py  v1.0后续ddl.md  大数据科学与技术人工智能综述报告.md  新增.md
Asset/UI/: mainwindow.ui
PhantomDrive-/: .gitignore  CMakeLists.txt  CMakeLists_Packaging.txt
PhantomDrive-/docs/: U-B_development_doc.md
PhantomDrive-/examples/UI_test/: CMakeLists.txt
PhantomDrive-/examples/a-b-ddl-event-integration-demo/: main.cpp
PhantomDrive-/examples/a-b-scoring-test/: test_ai_simple.cpp
PhantomDrive-/examples/ab-report-widget-demo/: CMakeLists.txt  main.cpp
PhantomDrive-/examples/comprehensive-test/: CMakeLists.txt
PhantomDrive-/examples/core-test/: test_ub_module.cpp
PhantomDrive-/examples/learning-mode-test/: main.cpp
PhantomDrive-/src/UI/: DrivingHistoryChartWidget.cpp  DrivingReportWidget.cpp  mainwindow.cpp
PhantomDrive-/src/gamemode/: AIOpponentManager.cpp  CollisionDetector.cpp  LearningMode.cpp  SimpleAIOpponent.cpp  SpeedLimitSignObject.cpp  TrafficObjectManager.cpp
PhantomDrive-/src/scoring/: TrafficRuleEnforcer.cpp
assets/: mainwindow.ui
build-mingw/: .ninja_deps  .ninja_log  build.ninja
build-mingw/PhantomDriveApp_autogen/: deps  moc_predefs.h
build-mingw/PhantomDrive_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-mingw/PhantomDrive_autogen/4K4ZTHEVPJ/: moc_MCPhysicsWorld.cpp.d
build-mingw/ab_report_widget_demo_autogen/: deps  moc_predefs.h
build-mingw/test_visualization_autogen/: deps  moc_predefs.h
build-msvc/: .ninja_deps  .ninja_log  PhantomDrive.exp  PhantomDrive.lib  build.ninja
build-msvc/PhantomDriveApp_autogen/: deps
build-msvc/PhantomDrive_autogen/: deps  mocs_compilation.cpp
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  TestVisualization.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_visualization_standalone.vcxproj  test_visualization_standalone.vcxproj.filters
build_test/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
docs/: AIOpponent_Interface_Design.md  PhantomDrive_CustomTrack_UI_Polish_ChangeLog_2026-05-31.docx  PhantomDrive_single_person_final_delivery.md  U-B_development_doc.md  U-B_history_hud_delivery.md  a-b-custom-track-mode-integration-guide(1).md  a-b-demo-script.md  a-b-integration-guide.md  a-b-v2-integration-guide.md  a-b-v2-interface-completion-2026-06-04.md  custom-track-ui-polish-2026-05-31.md  speed-display-unit-fix-2026-05-30.md  ui-main-menu-feedback-fix-2026-06-04.md  重构方案-物理引擎.md
examples/UI/: main.cpp
examples/UI_test/: CMakeLists.txt  main.cpp  test_coach_report.cpp
examples/a-a-race-integration-test/: main.cpp
examples/a-b-collector-integration-test/: CMakeLists.txt  main.cpp
examples/a-b-ddl-event-integration-demo/: CMakeLists.txt
examples/a-b-main-integration-test/: CMakeLists.txt  main.cpp
examples/a-b-scoring-test/: CMakeLists.txt  main.cpp
examples/ab-report-widget-demo/: CMakeLists.txt
examples/ai-test/: CMakeLists.txt  main.cpp
examples/comprehensive-test/: CMakeLists.txt  main.cpp
examples/core-test/: CMakeLists.txt  build.bat  main.cpp
examples/data-collector-test/: main.cpp
examples/learning-mode-test/: CMakeLists.txt  main.cpp
examples/simple-test/: CMakeLists.txt  main.cpp
examples/ub-module-test/: CMakeLists.txt  UBDemoWindow.cpp  UBDemoWindow.h  main.cpp
include/PhantomDrive/: PhantomDrive.h  PhantomDrive_global.h
packaging/: package.sh
source/: .gitignore  CMakeLists.txt  README.md  test_keyboard_fix.bat
source/docs/: 0608对接文档.md  AIOpponent_Interface_Design.md  MIXKIT_ARCADE_RACE_GAME_COUNTDOWN_SELECTED_SOURCE.url  PhantomDrive_single_person_final_delivery.md  SOUND_CREDITS.md  SOUND_IMPORT_README.md  U-A_final_polish_2026-06-11.md  U-B_history_hud_delivery.md  a-b-613_phantomdrive_window_work_summary.md  a-b-ui-report-map-readme-work-summary-2026-07-09.md  ai-coach-report-markdown-player-cache-2026-06-12.md  custom-track-player-ai-settings-2026-06-12.md  final_report_code_audit_material.md  package.md  package.sh  two-player-finish-gate-2026-06-12.md
source/tests/: test_visualization_simple.cpp
src/: datamodels.h  learninghud.cpp  main.cpp  saveloadmanager.cpp  saveloadmanager.h
src/UI/: ABDrivingReportWidget.cpp  ArcadeHUD.cpp  CustomTrackEditorWidget.cpp  DrivingReportWidget.cpp  GameTopBar.cpp  GameViewWidget.cpp  InteractiveFeedback.cpp  SoundGenerator.cpp  SoundManager.cpp  TestVisualizationWindow.cpp  learninghud.cpp  mainwindow.cpp
src/ai/: AIOpponent.cpp  AIOpponentFSM.cpp  AggressiveAI.cpp  ConservativeAI.cpp  StrategicAI.cpp
src/core/: GameEngine.cpp  VehiclePhysics.cpp  saveloadmanager.cpp
src/gamemode/: AIOpponent.cpp  AIOpponentManager.cpp  ArcadeMode.cpp  CustomTrackMode.cpp  DrivingDataCollector.cpp  DrivingDataCollector.cpp.backup  DrivingDataStorage.cpp  GameMode.cpp  GameModeManager.cpp  LearningMode.cpp  ModeTransition.cpp  PedestrianCrossingObject.cpp  Powerup.cpp  PowerupBox.cpp  PowerupManager.cpp  Powerups.cpp  SimpleAIOpponent.cpp  TrafficLightObject.cpp  TrafficObject.cpp  TrafficObjectManager.cpp  VehicleSensor.cpp
src/physics/: MCPhysicsWorld.cpp
src/scoring/: AIAPIClient.cpp  DrivingScoreCalculator.cpp  ScoreManager.cpp  ScoreReport.cpp  TrafficRuleEnforcer.cpp
src/track/: BuiltInTrackFactory.cpp  Checkpoint.cpp  TrackData.cpp  TrackDatabase.cpp  TrackIO.cpp  TrackManager.cpp  TrackTile.cpp  TrackValidator.cpp
tests/: test_keyboard_input.cpp  test_main_window.cpp  test_score_manager_dedup.cpp  test_visualization_main.cpp
windows-release/: README_DELIVERY_2026-06-11.md  RELEASE_SYNC_REPORT.md
windows-release/assets/: mainwindow.ui
windows-release/docs/: SOUND_MANIFEST.json
(+264 files in other folders)
